Moved the update function to the top of the file and made a few other small changes